[package]
name = "discovery-rs"
version = "0.1.0"
edition = "2021"
description = "mDNS-SD TUI browser"
repository = "https://github.com/JustPretender/discovery-rs"
license = "MIT OR Apache-2.0"
categories = ["network-programming", "command-line-utilities"]
exclude = ["static/*"]
homepage = "https://github.com/JustPretender/discovery-rs"
keywords = ["networking", "mdns", "discovery", "cli"]
readme = "README.md"
rust-version = "1.74.0"

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
ratatui = "0.26.3"
color-eyre = "0.6.3"
mdns-sd = "0.11.1"
flume = { version = "0.11.0", features = ["default", "select"] }
clap = "4.5.4"
clap_derive = "4.5.4"
regex = "1.10.5"
textwrap = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
parking_lot = "0.12.3"
